--- a/bower.json
+++ b/bower.json
@@ -3,31 +3,31 @@
   "author": "Richard Osterloh <richard.osterloh@gmail.com>",
   "private": true,
   "dependencies": {
-    "app-layout": "polymerelements/app-layout#^0.9.2",
+    "app-layout": "PolymerElements/app-layout#^0.10.0",
     "app-localize-behavior": "PolymerElements/app-localize-behavior#^0.9.2",
-    "app-route": "polymerelements/app-route#^0.9.2",
+    "app-route": "PolymerElements/app-route#^0.9.2",
     "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
     "iron-dropdown": "PolymerElements/iron-dropdown#^1.5.1",
-    "iron-flex-layout": "polymerelements/iron-flex-layout#^1.3.1",
-    "iron-icon": "polymerelements/iron-icon#^1.0.9",
-    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^1.0.9",
-    "iron-image": "PolymerElements/iron-image#^1.2.3",
-    "iron-localstorage": "polymerelements/iron-localstorage#^1.0.6",
-    "iron-media-query": "polymerelements/iron-media-query#^1.0.8",
-    "iron-pages": "polymerelements/iron-pages#^1.0.8",
-    "iron-selector": "polymerelements/iron-selector#^1.5.2",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.10",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.9",
+    "iron-image": "PolymerElements/iron-image#^1.2.4",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
+    "iron-media-query": "PolymerElements/iron-media-query#^1.0.8",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.8",
+    "iron-selector": "PolymerElements/iron-selector#^1.5.2",
     "paper-button": "PolymerElements/paper-button#^1.0.13",
     "paper-card": "PolymerElements/paper-card#^1.1.2",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.3.0",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.3.2",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.3.5",
     "paper-fab": "PolymerElements/paper-fab#^1.2.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
     "paper-input": "PolymerElements/paper-input#^1.1.17",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.0",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.1",
     "paper-material": "PolymerElements/paper-material#^1.0.6",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.16",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
@@ -35,12 +35,12 @@
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.6",
     "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2",
-    "polymer": "polymer/polymer#^1.6.1",
+    "polymer": "Polymer/polymer#^1.6.1",
     "marked-element": "PolymerElements/marked-element#^1.1.3",
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
     "time-elements": "github/time-elements#^0.5.0"
   },
   "devDependencies": {
-    "web-component-tester": "^4.3.1"
+    "web-component-tester": "Polymer/web-component-tester#^4.3.1"
   }
 }
