--- a/package.json
+++ b/package.json
@@ -12,16 +12,8 @@
     "url": "https://github.com/RichardOsterlohEngineering/roengineering/issues"
   },
   "engines": {
-    "node": ">=4.0"
+    "node": "~6.4.0",
+    "npm": "~3.10.6"
   },
-  "private": true,
-  "devDependencies": {
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.1",
-    "merge-stream": "^1.0.0",
-    "plylog": "^0.4.0",
-    "polymer-build": "^0.4.0"
-  }
+  "private": true
 }
