--- a/bower.json
+++ b/bower.json
@@ -3,27 +3,25 @@
   "author": "Richard Osterloh <richard.osterloh@gmail.com>",
   "private": true,
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#^0.10.4",
-    "app-localize-behavior": "PolymerElements/app-localize-behavior#^0.9.2",
-    "app-route": "PolymerElements/app-route#^0.9.2",
+    "app-layout": "PolymerElements/app-layout#^0.10.6",
+    "app-route": "PolymerElements/app-route#^0.9.3",
     "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
-    "iron-dropdown": "PolymerElements/iron-dropdown#^1.5.1",
+    "iron-dropdown": "PolymerElements/iron-dropdown#^1.5.3",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.11",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.10",
+    "iron-icons": "PolymerElements/iron-icons#^1.2.0",
     "iron-image": "PolymerElements/iron-image#^1.2.5",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.8",
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
     "iron-selector": "PolymerElements/iron-selector#^1.5.2",
-    "paper-button": "PolymerElements/paper-button#^1.0.13",
-    "paper-card": "PolymerElements/paper-card#^1.1.3",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.1",
+    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "paper-card": "PolymerElements/paper-card#^1.1.4",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.2",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.4.1",
-    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
-    "paper-input": "PolymerElements/paper-input#^1.1.20",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.4.2",
+    "paper-fab": "PolymerElements/paper-fab#^1.2.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
+    "paper-input": "PolymerElements/paper-input#^1.1.22",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
@@ -31,16 +29,17 @@
     "paper-material": "PolymerElements/paper-material#^1.0.6",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.16",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
-    "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.6",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7",
     "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3",
-    "polymer": "Polymer/polymer#^1.6.1",
+    "polymer": "Polymer/polymer#^1.7.0",
     "marked-element": "PolymerElements/marked-element#^1.2.0",
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
-    "time-elements": "github/time-elements#^0.5.0"
+    "time-elements": "github/time-elements#^0.5.0",
+    "polymerfire": "^0.10.3"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#^4.3.5"
+    "web-component-tester": "Polymer/web-component-tester#^4.3.6"
   }
 }
