--- a/package.json
+++ b/package.json
@@ -11,9 +11,32 @@
   "bugs": {
     "url": "https://github.com/RichardOsterlohEngineering/roengineering/issues"
   },
+  "scripts": {
+    "build": "gulp",
+    "serve": "gulp serve"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.8",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-slam": "^1.2.1",
+    "del": "^2.2.2",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-cli": "^1.2.2",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-nunjucks": "^3.0.0",
+    "gulp-replace": "^0.5.4",
+    "gulp-uglify": "^2.0.1",
+    "merge-stream": "^1.0.1",
+    "plylog": "^0.4.0",
+    "polymer-build": "^0.8.1",
+    "require-uncached": "^1.0.3",
+    "sw-precache": "^5.0.0"
+  },
   "engines": {
-    "node": "~6.7.0",
-    "npm": "~3.10.8"
+    "node": "~6.9.5",
+    "npm": "~4.2.0"
   },
   "private": true
 }
