--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-node_js: 7
+node_js: 8
 cache:
   directories:
   - node_modules
@@ -14,8 +14,6 @@ addons:
     packages:
     - g++-4.8
 install:
-- npm install -g bower
 - npm install
-- bower install
-script: echo "Deploying!"
-before_deploy: npm run build
+script: echo "Building!"
+build: npm run build
