--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,31 @@
 {
   "name": "roengineering",
+  "version": "2.0.0",
   "author": "Richard Osterloh <richard.osterloh@gmail.com>",
   "private": true,
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#^0.10.6",
-    "app-route": "PolymerElements/app-route#^0.9.3",
-    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
-    "paper-elements": "PolymerElements/paper-elements#^1.0.7",
-    "polymer": "Polymer/polymer#^1.8.0",
-    "marked-element": "PolymerElements/marked-element#^1.2.0",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
-    "time-elements": "github/time-elements#^0.5.0",
-    "polymerfire": "^0.10.3"
+    "app-route": "PolymerElements/app-route#^2.0.0",
+    "app-layout": "PolymerElements/app-layout#^2.0.0",
+    "firebase": "^4.1.3",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.0",
+    "iron-image": "PolymerElements/iron-image#^2.1.1",
+    "iron-lazy-pages": "TimvdLippe/iron-lazy-pages#^2.0.2",
+    "iron-pages": "PolymerElements/iron-pages#2.0.0",
+    "marked-element": "PolymerElements/marked-element#^2.1.1",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-fab": "PolymerElements/paper-fab#^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.1",
+    "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
+    "plastic-image": "mlisook/plastic-image#^1.0.5",
+    "polymer": "Polymer/polymer#^2.0.1",
+    "polymer-redux": "tur-nr/polymer-redux#^1.0.1",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.1"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#^4.3.6"
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0"
+  },
+  "resolutions": {
+    "polymer": "^2.0.1"
   }
 }
