--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-
 {
   "name": "roengineering",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Source for roengineering.tech",
   "repository": {
     "type": "git",
@@ -12,31 +11,42 @@
     "url": "https://github.com/RichardOsterlohEngineering/roengineering/issues"
   },
   "scripts": {
+    "gulp": "gulp",
+    "bower": "bower",
     "build": "gulp",
+    "postinstall": "bower install",
     "serve": "gulp serve"
   },
+  "dependencies": {
+    "redux": "^3.6.0"
+  },
   "devDependencies": {
-    "browser-sync": "^2.18.8",
+    "bower": "^1.8.0",
+    "browser-sync": "^2.18.12",
     "connect-history-api-fallback": "^1.3.0",
     "css-slam": "^1.2.1",
-    "del": "^2.2.2",
+    "del": "^3.0.0",
+    "eslint": "^4.1.1",
+    "eslint-config-google": "^0.8.0",
+    "eslint-plugin-html": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-cli": "^1.2.2",
+    "gulp-cli": "^1.3.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.1.1",
+    "gulp-imagemin": "^3.3.0",
     "gulp-nunjucks": "^3.0.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^2.0.1",
+    "gulp-replace": "^0.6.1",
+    "gulp-uglify": "^3.0.0",
     "merge-stream": "^1.0.1",
-    "plylog": "^0.4.0",
-    "polymer-build": "^0.8.1",
+    "plylog": "^0.5.0",
+    "polymer-build": "^1.5.1",
     "require-uncached": "^1.0.3",
-    "sw-precache": "^5.0.0"
+    "sw-precache": "^5.1.1",
+    "uglify-es": "^3.0.21"
   },
   "engines": {
-    "node": "~6.9.5",
-    "npm": "~4.2.0"
+    "node": "~8.1.2",
+    "npm": "~5.0.4"
   },
   "private": true
 }
