--- a/bower.json
+++ b/bower.json
@@ -6,21 +6,27 @@
   "dependencies": {
     "app-route": "PolymerElements/app-route#^2.0.0",
     "app-layout": "PolymerElements/app-layout#^2.0.0",
+    "clamp-js": "*",
     "firebase": "^4.1.3",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.2",
+    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
     "iron-icon": "PolymerElements/iron-icon#^2.0.0",
     "iron-image": "PolymerElements/iron-image#^2.1.1",
     "iron-lazy-pages": "TimvdLippe/iron-lazy-pages#^2.0.2",
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#^2.0.0",
     "iron-pages": "PolymerElements/iron-pages#2.0.0",
     "marked-element": "PolymerElements/marked-element#^2.1.1",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-dialog-behavior": "PolymerElements/paper-dialog-behavior#^2.0.0",
     "paper-fab": "PolymerElements/paper-fab#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "paper-input": "PolymerElements/paper-input#^2.0.1",
+    "paper-menu-button": "^2.0.0",
     "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
     "plastic-image": "mlisook/plastic-image#^1.0.5",
     "polymer": "Polymer/polymer#^2.0.1",
     "polymer-redux": "tur-nr/polymer-redux#^1.0.1",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.1"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.1"    
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
