--- a/data/config.json
+++ b/data/config.json
@@ -41,7 +41,7 @@
   ],
   "heroSettings": {
     "home": {
-      "description": "Richard Osterloh Engineering. Embedded Software development and consultancy",
+      "description": "Richard Osterloh Engineering\nEmbedded Software development and consultancy",
       "background": {
         "color": "#FF9800",
         "image": "/images/backgrounds/header.jpg"
@@ -58,10 +58,9 @@
     "team": {
       "title": "Team",
       "background": {
-        "color": "rgba(0, 198, 255, 0.1)",
-        "gradient": "linear-gradient(to right, #00c6ff, #0072ff)"
+        "color": "#fff"
       },
-      "fontColor": "#fff"
+      "fontColor": "#424242"
     }
   },
   "mediaQueries": {
@@ -81,55 +80,70 @@
     }
   },
   "socialNetwork": {
-    "follow" : [
-    {
-      "name": "facebook",
-      "url": "https://www.facebook.com/richard.osterloh/"
-    },
-    {
-      "name": "twitter",
-      "url": "https://twitter.com/riosterloh/"
-    },
-    {
-      "name": "instagram",
-      "url": "https://www.instagram.com/riosterloh"
-    },
-    {
-      "name": "youtube",
-      "url": "https://www.youtube.com/channel/UCqBbG2QnxT3aHCETOPs6wZg"
-    },
-    {
-      "name": "gplus",
-      "url": "https://plus.google.com/+RichardOsterloh"
-    },
-    {
-      "name": "linkedin",
-      "url": "https://www.linkedin.com/in/richardosterloh"
-    }
-  ],
-    "share" : [
+    "follow": [
       {
-        "name" : "gplus",
-        "url" :  "https://plus.google.com/share?url="
+        "name": "facebook",
+        "url": "https://www.facebook.com/richard.osterloh/"
       },
       {
-        "name" : "facebook",
-        "url" :  "https://www.facebook.com/sharer.php?u="
+        "name": "twitter",
+        "url": "https://twitter.com/riosterloh/"
       },
       {
-        "name" : "twitter",
-        "url" :  "https://twitter.com/intent/tweet?text="
+        "name": "instagram",
+        "url": "https://www.instagram.com/riosterloh"
+      },
+      {
+        "name": "youtube",
+        "url": "https://www.youtube.com/channel/UCqBbG2QnxT3aHCETOPs6wZg"
+      },
+      {
+        "name": "gplus",
+        "url": "https://plus.google.com/+RichardOsterloh"
+      },
+      {
+        "name": "linkedin",
+        "url": "https://www.linkedin.com/in/richardosterloh"
       }
-    ]},
+    ],
+    "share": [
+      {
+        "name": "gplus",
+        "url": "https://plus.google.com/share?url="
+      },
+      {
+        "name": "facebook",
+        "url": "https://www.facebook.com/sharer.php?u="
+      },
+      {
+        "name": "twitter",
+        "url": "https://twitter.com/intent/tweet?text="
+      }
+    ]
+  },
   "mailto": "richard.osterloh@gmail.com",
-  "gallery": {
-    "albumUrl": "https://plus.google.com/u/0/collection/wE4hqB",
-    "photos": {
-      "big": "/images/backgrounds/DragonBoard820.jpg",
-      "small": [
-        "/images/backgrounds/Macro.jpg",
-        "/images/backgrounds/FishEye.jpg"
-      ]
-    }
+  "signInProviders": {
+    "providersData": [
+      {
+        "name": "google",
+        "label": "Sign-in with Google",
+        "url": "https://accounts.google.com"
+      }, 
+      {
+        "name": "facebook",
+        "label": "Sign-in with Facebook",
+        "url": "https://www.facebook.com"
+      }, 
+      {
+        "name": "twitter",
+        "label": "Sign-in with Twitter",
+        "url": "https://twitter.com"
+      }
+    ],
+    "allowedProvidersUrl": [
+      "https://accounts.google.com",
+      "https://www.facebook.com",
+      "https://twitter.com"
+    ]
   }
 }
