--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "serve": "gulp serve"
   },
   "dependencies": {
-    "redux": "^3.6.0"
+    "autotrack": "^2.4.1",
+    "redux": "^3.7.1"
   },
   "devDependencies": {
     "bower": "^1.8.0",
@@ -27,7 +28,7 @@
     "css-slam": "^1.2.1",
     "del": "^3.0.0",
     "eslint": "^4.1.1",
-    "eslint-config-google": "^0.8.0",
+    "eslint-config-google": "^0.9.1",
     "eslint-plugin-html": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-cli": "^1.3.0",
@@ -39,14 +40,13 @@
     "gulp-uglify": "^3.0.0",
     "merge-stream": "^1.0.1",
     "plylog": "^0.5.0",
-    "polymer-build": "^1.5.1",
+    "polymer-build": "^1.6.0",
     "require-uncached": "^1.0.3",
     "sw-precache": "^5.1.1",
     "uglify-es": "^3.0.21"
   },
   "engines": {
-    "node": "~8.1.2",
-    "npm": "~5.0.4"
+    "node": ">=4.0"
   },
   "private": true
 }
