--- a/package.json
+++ b/package.json
@@ -15,38 +15,43 @@
     "bower": "bower",
     "build": "gulp",
     "postinstall": "bower install",
-    "serve": "gulp serve"
+    "serve": "gulp serve",
+    "lint": "gulp lint"
   },
   "dependencies": {
     "autotrack": "^2.4.1",
-    "redux": "^3.7.1"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
-    "bower": "^1.8.0",
-    "browser-sync": "^2.18.12",
-    "connect-history-api-fallback": "^1.3.0",
-    "css-slam": "^1.2.1",
+    "bower": "^1.8.2",
+    "browser-sync": "^2.23.5",
+    "connect-history-api-fallback": "^1.5.0",
+    "css-slam": "^2.0.2",
     "del": "^3.0.0",
-    "eslint": "^4.1.1",
+    "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-html": "^3.0.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-cli": "^1.3.0",
-    "gulp-htmlmin": "^3.0.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-polymer": "^0.2.1",
+    "gulp": "^4.0.0",
+    "gulp-cli": "^2.0.1",
+    "gulp-eslint": "^4.0.0",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-nunjucks": "^3.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-nunjucks": "^3.1.1",
     "gulp-replace": "^0.6.1",
     "gulp-uglify": "^3.0.0",
     "merge-stream": "^1.0.1",
-    "plylog": "^0.5.0",
-    "polymer-build": "^1.6.0",
+    "polymer-build": "^2.1.1",
+    "pre-commit": "^1.2.2",
     "require-uncached": "^1.0.3",
-    "sw-precache": "^5.1.1",
-    "uglify-es": "^3.0.21"
+    "sw-precache": "^5.2.0",
+    "uglify-es": "^3.3.8"
   },
   "engines": {
-    "node": ">=4.0"
+    "node": ">=8.9.4"
   },
-  "private": true
+  "private": true,
+  "pre-commit": "lint"
 }
